# EvolutionaryMeshSimplification

./: .gitignore  .gitmodules  CMakeLists.txt
Assets/: AssetSources.txt
Dependencies/: CMakeLists.txt
src/: MathUtils.cpp  MathUtils.h  ModelLoader.cpp  ModelLoader.h  ModelOptimizer.cpp  ModelOptimizer.h  MyApplication.cpp  MyApplication.h  main.cpp
